--- a/index.html
+++ b/index.html
@@ -53,40 +53,46 @@
       <h2 class="visually-hidden">Предложения</h2>
 
       <article class="special-offer">
-      <!-- <img alt="Крем-брюле и пломбир с малиновым джемом" src="IMG/IceCreams_1.png" /> -->
+        <!-- <img alt="Крем-брюле и пломбир с малиновым джемом" src="IMG/IceCreams_1.png" /> -->
 
-      <p>
-        Крем-брюле и пломбир
-        <br>
-        с малиновым джемом
-      </p>
+        <p>
+          Крем-брюле и пломбир
+          <br />
+          с малиновым джемом
+        </p>
 
-      <button type="button">Давайте оба!</button>
-    </article>
+        <button type="button">Давайте оба!</button>
+      </article>
 
-    <article class="special-offer visually-hidden">
-      <img alt="Шоколадный пломбир и лимонный сорбет" src="IMG/IceCreams_2.png" />
+      <article class="special-offer visually-hidden">
+        <img
+          alt="Шоколадный пломбир и лимонный сорбет"
+          src="IMG/IceCreams_2.png"
+        />
 
-      <p>
-        Шоколадный пломбир
-        <br>
-        и лимонный сорбет
-      </p>
+        <p>
+          Шоколадный пломбир
+          <br />
+          и лимонный сорбет
+        </p>
 
-      <button type="button">Давайте оба!</button>
-    </article>
+        <button type="button">Давайте оба!</button>
+      </article>
 
-    <article class="special-offer visually-hidden">
-      <img alt="Пломбир с помадкой и клубничный щербет" src="IMG/IceCreams_3.png" />
+      <article class="special-offer visually-hidden">
+        <img
+          alt="Пломбир с помадкой и клубничный щербет"
+          src="IMG/IceCreams_3.png"
+        />
 
-      <p>
-        Пломбир с помадкой
-        <br>
-        и клубничный щербет
-      </p>
+        <p>
+          Пломбир с помадкой
+          <br />
+          и клубничный щербет
+        </p>
 
-      <button type="button">Давайте оба!</button>
-    </article>
+        <button type="button">Давайте оба!</button>
+      </article>
 
       <section class="banner">
         <h3>Малинка даром!</h3>
