--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>GllacyShop</title>
     <link href="IMG/ice-cream.svg" rel="icon" type="image/png" />
     <link href="CSS/normalize.css" rel="stylesheet" />
-    <link href="CSS/index.css" rel="stylesheet" />
+    <link href="CSS/style.css" rel="stylesheet" />
   </head>
 
   <body>
