Применение flexbox для header.

--- a/index.html
+++ b/index.html
@@ -21,8 +21,12 @@
         </a>
 
         <ul class="site-navigation">
-          <li><button type="button">Каталог</button></li>
-          <li><a href="">Доставка и оплата</a></li>
+          <li>
+            <button type="button">Каталог</button>
+          </li>
+          <li>
+            <a href="">Доставка и оплата</a>
+          </li>
           <li><a href="">О компании</a></li>
         </ul>
 
@@ -32,10 +36,10 @@
               <img src="IMG/loupe.svg" alt="Иконка поиска" />
             </button>
           </li>
-          <li><a class="login-link" href="">Вход</a></li>
+          <li><a class="login-link" href=""><img src="IMG/entrance.svg"/>Вход</a></li>
           <li>
             <button type="button">
-              <img src="IMG/basket.svg" alt="Корзина" />
+              <img src="IMG/basket.svg" alt="Корзина" />Пусто
             </button>
           </li>
         </ul>
@@ -65,10 +69,10 @@
       </article>
 
       <article class="special-offer visually-hidden">
-        <img
+        <!-- <img
           alt="Шоколадный пломбир и лимонный сорбет"
           src="IMG/IceCreams_2.png"
-        />
+        /> -->
 
         <p>
           Шоколадный пломбир
@@ -80,10 +84,10 @@
       </article>
 
       <article class="special-offer visually-hidden">
-        <img
+        <!-- <img
           alt="Пломбир с помадкой и клубничный щербет"
           src="IMG/IceCreams_3.png"
-        />
+        /> -->
 
         <p>
           Пломбир с помадкой
