--- a/index.html
+++ b/index.html
@@ -32,14 +32,34 @@
 
         <ul class="user-navigation">
           <li>
-            <button type="button">
-              <img src="IMG/loupe.svg" alt="Иконка поиска" />
+            <button class="search__button" type="button">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                xmlns:xlink="http://www.w3.org/1999/xlink"
+                width="17"
+                height="17"
+                viewBox="0 0 17 17"
+              >
+                <path
+                  fill="#fff"
+                  d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"
+                />
+              </svg>
             </button>
           </li>
-          <li><a class="login-link" href=""><img src="IMG/entrance.svg"/>Вход</a></li>
           <li>
-            <button type="button">
-              <img src="IMG/basket.svg" alt="Корзина" />Пусто
+            <a class="login-link" href=""
+              ><img src="IMG/entrance.svg" width="21" height="19" />Вход</a
+            >
+          </li>
+          <li>
+            <button class="basket__button" type="button">
+              <img
+                src="IMG/basket.svg"
+                alt="Корзина"
+                width="21"
+                height="20"
+              />Пусто
             </button>
           </li>
         </ul>
