--- a/index.html
+++ b/index.html
@@ -48,18 +48,43 @@
             </button>
           </li>
           <li>
-            <a class="login-link" href=""
-              ><img src="IMG/entrance.svg" width="21" height="19" />Вход</a
+            <a class="login-link" href="">
+              <svg
+                width="21"
+                height="19"
+                viewBox="0 0 21 19"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M7.00001 14.875L13.917 9.5L7.00001 4.125V7.042H0.958008V11.959H7.00001V14.875Z"
+                  fill="white"
+                />
+                <path
+                  d="M19 0H6C4.9 0 4 0.9 4 2V4H6V2H19V17H6V15H4V17C4 18.1 4.9 19 6 19H19C20.1 19 21 18.1 21 17V2C21 0.9 20.1 0 19 0Z"
+                  fill="white"
+                />
+              </svg>
+              Вход</a
             >
           </li>
           <li>
             <button class="basket__button" type="button">
-              <img
-                src="IMG/basket.svg"
-                alt="Корзина"
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
                 width="21"
                 height="20"
-              />Пусто
+                viewBox="0 0 21 20"
+              >
+                <g fill="#FFF">
+                  <path
+                    d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"
+                  />
+                  <circle cx="6.984" cy="18" r="2" />
+                  <circle cx="15.984" cy="18" r="2" />
+                </g>
+              </svg>
+              Пусто
             </button>
           </li>
         </ul>
