--- a/index.html
+++ b/index.html
@@ -19,75 +19,78 @@
             alt="Логотип магазина"
           />
         </a>
+        <!-- <div class="main-navigation-wrapper"> -->
+        <div class="container">
+          <ul class="site-navigation">
+            <li>
+              <button type="button">Каталог</button>
+            </li>
+            <li>
+              <a href="">Доставка и оплата</a>
+            </li>
+            <li><a href="">О Компании</a></li>
+          </ul>
 
-        <ul class="site-navigation">
-          <li>
-            <button type="button">Каталог</button>
-          </li>
-          <li>
-            <a href="">Доставка и оплата</a>
-          </li>
-          <li><a href="">О компании</a></li>
-        </ul>
-
-        <ul class="user-navigation">
-          <li>
-            <button class="search__button" type="button">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                xmlns:xlink="http://www.w3.org/1999/xlink"
-                width="17"
-                height="17"
-                viewBox="0 0 17 17"
-              >
-                <path
-                  fill="#fff"
-                  d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"
-                />
-              </svg>
-            </button>
-          </li>
-          <li>
-            <a class="login-link" href="">
-              <svg
-                width="21"
-                height="19"
-                viewBox="0 0 21 19"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M7.00001 14.875L13.917 9.5L7.00001 4.125V7.042H0.958008V11.959H7.00001V14.875Z"
-                  fill="white"
-                />
-                <path
-                  d="M19 0H6C4.9 0 4 0.9 4 2V4H6V2H19V17H6V15H4V17C4 18.1 4.9 19 6 19H19C20.1 19 21 18.1 21 17V2C21 0.9 20.1 0 19 0Z"
-                  fill="white"
-                />
-              </svg>
-              Вход</a
-            >
-          </li>
-          <li>
-            <button class="basket__button" type="button">
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="21"
-                height="20"
-                viewBox="0 0 21 20"
-              >
-                <g fill="#FFF">
+          <ul class="user-navigation">
+            <li>
+              <button class="search__button" type="button">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  width="17"
+                  height="17"
+                  viewBox="0 0 17 17"
+                >
                   <path
-                    d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"
+                    fill="#fff"
+                    d="M16.958 15.527L11.75 10.32A6.455 6.455 0 0 0 13 6.5 6.5 6.5 0 1 0 6.5 13a6.465 6.465 0 0 0 3.839-1.263l5.205 5.204 1.414-1.414zM6.5 11C4.019 11 2 8.981 2 6.5S4.019 2 6.5 2 11 4.019 11 6.5 8.981 11 6.5 11z"
                   />
-                  <circle cx="6.984" cy="18" r="2" />
-                  <circle cx="15.984" cy="18" r="2" />
-                </g>
-              </svg>
-              Пусто
-            </button>
-          </li>
-        </ul>
+                </svg>
+              </button>
+            </li>
+            <li>
+              <a class="login-link" href="">
+                <svg
+                  width="21"
+                  height="19"
+                  viewBox="0 0 21 19"
+                  fill="none"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M7.00001 14.875L13.917 9.5L7.00001 4.125V7.042H0.958008V11.959H7.00001V14.875Z"
+                    fill="white"
+                  />
+                  <path
+                    d="M19 0H6C4.9 0 4 0.9 4 2V4H6V2H19V17H6V15H4V17C4 18.1 4.9 19 6 19H19C20.1 19 21 18.1 21 17V2C21 0.9 20.1 0 19 0Z"
+                    fill="white"
+                  />
+                </svg>
+                <div>Вход</div>
+              </a>
+            </li>
+            <li>
+              <button class="basket__button" type="button">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="21"
+                  height="20"
+                  viewBox="0 0 21 20"
+                >
+                  <g fill="#FFF">
+                    <path
+                      d="M5.657 2.031L5.422 0H0v2h3.64l1.5 13h13.988l1.699-12.969H5.657zM17.372 13H6.922L5.888 4.031h12.66L17.372 13z"
+                    />
+                    <circle cx="6.984" cy="18" r="2" />
+                    <circle cx="15.984" cy="18" r="2" />
+                  </g>
+                </svg>
+                Пусто
+              </button>
+            </li>
+          </ul>
+          <!-- </div> -->
+        </div>
       </nav>
 
       <h1 class="visually-hidden">Магазин мороженого</h1>
@@ -98,7 +101,8 @@
       </ul>
     </header>
 
-    <main class="main-container">
+    <!-- <main class="main-container"> -->
+    <main class="container">
       <h2 class="visually-hidden">Предложения</h2>
 
       <article class="special-offer">
@@ -329,7 +333,12 @@
       </ul>
 
       <div class="created-by">
-        <img src="IMG/logo-htmlacademy.svg" alt="HTML Academy" />
+        <img
+          src="IMG/logo-htmlacademy.svg"
+          width="109"
+          height="38"
+          alt="HTML Academy"
+        />
         <p>Сделано в HTML Academy © 2019</p>
       </div>
     </footer>
