Подгонка по Pixel Perfect

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <circle cx="15.984" cy="18" r="2" />
                   </g>
                 </svg>
-                Пусто
+                <div>Пусто</div>
               </button>
             </li>
           </ul>
@@ -107,13 +107,11 @@
 
       <article class="special-offer">
         <!-- <img alt="Крем-брюле и пломбир с малиновым джемом" src="IMG/IceCreams_1.png" /> -->
-
         <p>
           Крем-брюле и пломбир
           <br />
           с малиновым джемом
         </p>
-
         <button type="button">Давайте оба!</button>
       </article>
 
