Выравнена шапка главной страницы

--- a/index.html
+++ b/index.html
@@ -94,11 +94,12 @@
       </nav>
 
       <h1 class="visually-hidden">Магазин мороженого</h1>
-
-      <ul class="working-time">
-        <li>С 10 до 20, ежедневно</li>
-        <li>8 812 450-25-25</li>
-      </ul>
+      <div class="working-time-container">
+        <ul class="working-time">
+          <li>С 10 до 20, ежедневно</li>
+          <li>8 812 450-25-25</li>
+        </ul>
+      </div>
     </header>
 
     <!-- <main class="main-container"> -->
