--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
 
       <h1 class="visually-hidden">Магазин мороженого</h1>
       <!-- <div class="working-time-container"> -->
-        <ul class="working-time">
-          <li>С 10 до 20, ежедневно</li>
-          <li>8 812 450-25-25</li>
-        </ul>
+      <ul class="working-time">
+        <li>С 10 до 20, ежедневно</li>
+        <li>8 812 450-25-25</li>
+      </ul>
       <!-- </div> -->
     </header>
 
@@ -135,6 +135,7 @@
         <button type="button">Давайте оба!</button>
       </article>
 
+      <div class="banners">
       <section class="banner" id="first-banner">
         <h3>Малинка даром!</h3>
 
@@ -144,7 +145,9 @@
           в ваш заказ банку малинового варенья бесплатно.
         </p>
 
-        <button class="banner__button" type="button">Хочу варенье!</button>
+        <div class="banner__button" >
+          <button type="button">Хочу варенье!</button>
+        </div>
       </section>
 
       <section class="banner" id="second-banner">
@@ -156,8 +159,11 @@
           вкуснейшей шоколадной присыпки совершенно бесплатно.
         </p>
 
-        <button class="banner__button" type="button">Хочу шоколадки!</button>
+        <div class="banner__button">
+          <button  type="button">Хочу шоколадки!</button>
+        </div>
       </section>
+    </div>
 
       <section class="hits">
         <ul>
