изменено style.css, index.html

--- a/index.html
+++ b/index.html
@@ -163,46 +163,56 @@
         </section>
       </div>
 
-      <section class="hits">
-        <ul>
+      <!-- Огромное расстояние между Р и ценой -->
+      <section>
+        <ul class="hits">
           <li>
-            <div class="hit-icon">
-              <img src="IMG/hit.svg" alt="Хит" />
-              <img src="IMG/Taste_1.png" alt="Мороженое 1" />
+            <div class="hit-item">
+              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+              <img class="hit-photo" src="IMG/Taste_1.png" alt="Мороженое 1" />
+              <p class="price">
+                <strong>310 ₽<span class="unit-monetary">/кг</span></strong>
+              </p>
             </div>
-
-            <p class="price">310 ₽/кг</p>
-            <a href="">Сливочное с апельсиновым джемом и цитрусовой стружкой</a>
+            <a class="ice-cream-name" href=""
+              >Сливочное с апельсиновым джемом и цитрусовой стружкой</a
+            >
           </li>
 
           <li>
-            <div class="hit-icon">
-              <img src="IMG/hit.svg" alt="Хит" />
-              <img src="IMG/Taste_2.png" alt="Мороженое 2" />
+            <div class="hit-item">
+              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+              <img class="hit-photo" src="IMG/Taste_2.png" alt="Мороженое 2" />
+              <p class="price">380 ₽<span class="unit-monetary">/кг</span></p>
             </div>
 
-            <p class="price">380 ₽/кг</p>
-            <a href="">Сливочно-кофейное с кусочками шоколада</a>
+            <a class="ice-cream-name" href=""
+              >Сливочно-кофейное с кусочками шоколада</a
+            >
           </li>
 
           <li>
-            <div class="hit-icon">
-              <img src="IMG/hit.svg" alt="Хит" />
-              <img src="IMG/Taste_3.png" alt="Мороженое 3" />
+            <div class="hit-item">
+              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+              <img class="hit-photo" src="IMG/Taste_3.png" alt="Мороженое 3" />
+              <p class="price">355 ₽<span class="unit-monetary">/кг</span></p>
             </div>
 
-            <p class="price">355 ₽/кг</p>
-            <a href="">Сливочно-клубничное с присыпкой из белого шоколада</a>
+            <a class="ice-cream-name" href=""
+              >Сливочно-клубничное с присыпкой из белого шоколада</a
+            >
           </li>
 
           <li>
-            <div class="hit-icon">
-              <img src="IMG/hit.svg" alt="Хит" />
-              <img src="IMG/Taste_4.png" alt="Мороженое 4" />
+            <div class="hit-item">
+              <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
+              <img class="hit-photo" src="IMG/Taste_4.png" alt="Мороженое 4" />
+              <p class="price">415 ₽<span class="unit-monetary">/кг</span></p>
             </div>
 
-            <p class="price">415 ₽/кг</p>
-            <a href="">Сливочное крем-брюле с карамельной подливкой</a>
+            <a class="ice-cream-name" href=""
+              >Сливочное крем-брюле с карамельной подливкой</a
+            >
           </li>
         </ul>
       </section>
