Исправлены строки с ценами index.html, style.css

--- a/index.html
+++ b/index.html
@@ -163,7 +163,6 @@
         </section>
       </div>
 
-      <!-- Огромное расстояние между Р и ценой -->
       <section>
         <ul class="hits">
           <li>
@@ -171,7 +170,9 @@
               <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
               <img class="hit-photo" src="IMG/Taste_1.png" alt="Мороженое 1" />
               <p class="price">
-                <strong>310 ₽<span class="unit-monetary">/кг</span></strong>
+                310
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
               </p>
             </div>
             <a class="ice-cream-name" href=""
@@ -183,7 +184,11 @@
             <div class="hit-item">
               <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
               <img class="hit-photo" src="IMG/Taste_2.png" alt="Мороженое 2" />
-              <p class="price">380 ₽<span class="unit-monetary">/кг</span></p>
+              <p class="price">
+                380
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
             </div>
 
             <a class="ice-cream-name" href=""
@@ -195,7 +200,11 @@
             <div class="hit-item">
               <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
               <img class="hit-photo" src="IMG/Taste_3.png" alt="Мороженое 3" />
-              <p class="price">355 ₽<span class="unit-monetary">/кг</span></p>
+              <p class="price">
+                355
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
             </div>
 
             <a class="ice-cream-name" href=""
@@ -207,7 +216,11 @@
             <div class="hit-item">
               <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
               <img class="hit-photo" src="IMG/Taste_4.png" alt="Мороженое 4" />
-              <p class="price">415 ₽<span class="unit-monetary">/кг</span></p>
+              <p class="price">
+                415
+                <span class="rub">₽</span>
+                <span class="unit-monetary">/кг</span>
+              </p>
             </div>
 
             <a class="ice-cream-name" href=""
@@ -291,6 +304,24 @@
       </section>
 
       <article class="map">
+        <div style="position: relative; overflow: hidden">
+          <a
+            href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps"
+            style="color: #eee; font-size: 12px; position: absolute; top: 0px"
+            >Санкт‑Петербург</a
+          ><a
+            href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSUYAQFtjfXVyeXpgZQ==/?ll=30.323036%2C59.938631&utm_medium=mapframe&utm_source=maps&z=16.65"
+            style="color: #eee; font-size: 12px; position: absolute; top: 14px"
+            >Большая Конюшенная улица, 19/8 — Яндекс Карты</a
+          ><iframe
+            src="https://yandex.ru/map-widget/v1/?ll=30.323036%2C59.938631&mode=search&ol=geo&ouri=ymapsbm1%3A%2F%2Fgeo%3Fdata%3DCgg1NzM5NDE4NBJh0KDQvtGB0YHQuNGPLCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywg0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQu9C40YbQsCwgMTkvOCIKDZaV8kEVKcFvQg%2C%2C&z=16.65"
+            width="560"
+            height="400"
+            frameborder="1"
+            allowfullscreen="true"
+            style="position: relative"
+          ></iframe>
+        </div>
         <section class="address">
           <h5>Адрес главного офиса и офлайн-магазина:</h5>
           <p>ул. Большая Конюшенная 19/8, Санкт-Петербург</p>
