Переделала margin  и padding

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
         <button type="button">Давайте оба!</button>
       </article>
 
+
       <div class="banners">
         <section class="banner" id="first-banner">
           <h3>Малинка даром!</h3>
@@ -163,8 +164,9 @@
         </section>
       </div>
 
-      <section>
-        <ul class="hits">
+      
+      <section class="hits-container">
+        <ul class="hits-list">
           <li>
             <div class="hit-item">
               <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
@@ -174,10 +176,11 @@
                 <span class="rub">₽</span>
                 <span class="unit-monetary">/кг</span>
               </p>
+
+              <a class="ice-cream-name" href=""
+                >Сливочное с апельсиновым джемом и цитрусовой стружкой</a
+              >
             </div>
-            <a class="ice-cream-name" href=""
-              >Сливочное с апельсиновым джемом и цитрусовой стружкой</a
-            >
           </li>
 
           <li>
@@ -189,11 +192,11 @@
                 <span class="rub">₽</span>
                 <span class="unit-monetary">/кг</span>
               </p>
-            </div>
 
-            <a class="ice-cream-name" href=""
-              >Сливочно-кофейное с кусочками шоколада</a
-            >
+              <a class="ice-cream-name" href=""
+                >Сливочно-кофейное с кусочками шоколада</a
+              >
+            </div>
           </li>
 
           <li>
@@ -205,11 +208,10 @@
                 <span class="rub">₽</span>
                 <span class="unit-monetary">/кг</span>
               </p>
+              <a class="ice-cream-name" href=""
+                >Сливочно-клубничное с присыпкой из белого шоколада</a
+              >
             </div>
-
-            <a class="ice-cream-name" href=""
-              >Сливочно-клубничное с присыпкой из белого шоколада</a
-            >
           </li>
 
           <li>
@@ -221,11 +223,10 @@
                 <span class="rub">₽</span>
                 <span class="unit-monetary">/кг</span>
               </p>
+              <a class="ice-cream-name" href=""
+                >Сливочное крем-брюле с карамельной подливкой</a
+              >
             </div>
-
-            <a class="ice-cream-name" href=""
-              >Сливочное крем-брюле с карамельной подливкой</a
-            >
           </li>
         </ul>
       </section>
