Баннеры+хиты(еще не выравнены цены)

--- a/index.html
+++ b/index.html
@@ -133,7 +133,6 @@
         <button type="button">Давайте оба!</button>
       </article>
 
-
       <div class="banners">
         <section class="banner" id="first-banner">
           <h3>Малинка даром!</h3>
@@ -164,9 +163,8 @@
         </section>
       </div>
 
-      
       <section class="hits-container">
-        <ul class="hits-list">
+        <ul class="hits">
           <li>
             <div class="hit-item">
               <img class="hit-icon" src="IMG/hit.svg" alt="Хит" />
